- Corrects error handling keys: we should ignore when ctrl/alt/shift is depressed (don't want to capture alt-Left, e.g.) - Starts slideshow and triggers image preload only once the page has loaded (preventing a delay in load occurring) - Makes spacebar toggle slideshow mode on/off. - Includes touchSwipe; enables touch navigation on example-7. Control is put in the html rather than jquery.galleriffic.js. - Enables differentiating prev/next page link text from title (to allow including markup) - Fixes the same for play/pause slideshow link. - Adds next/prev class to next/prev page link tags to allow styling - Resizes portait images to the same extent it would downsize landscape ones (avoids portraits being more zoomed in than others, and keeps the height more in check)

--- a/css/basic-responsive.css
+++ b/css/basic-responsive.css
@@ -68,10 +68,10 @@ div#footer {
 	padding: 15px 0 30px;
 	text-align: center;
 }
-div.navigation a.prev {
+div.navigation a.pageLink.prev {
 	background-image: url(prevPageArrow.gif);
 }
-div.navigation a.next {
+div.navigation a.pageLink.next {
 	background-image: url(nextPageArrow.gif);
 }
 
